--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,13 +142,14 @@
 
 .sec3_gradup {
     min-height: 104px;
-    background: linear-gradient(180deg, rgba(12, 12, 12, 0.44) 25.4%, rgba(17, 17, 16, 0) 25.4%, #0C0C0C 70.63%);
+    background: linear-gradient(360deg, rgba(12, 12, 12, 0.44) 25.4%, rgba(17, 17, 16, 0) 25.4%, #0C0C0C 70.63%);
     top: 0;
 }
 
 .sec3_graddown {
     bottom: 0;
     min-height: 104px;
+    width: 100%;
     background: linear-gradient(180deg, rgba(12, 12, 12, 0.44) 25.4%, rgba(17, 17, 16, 0) 25.4%, #0C0C0C 70.63%);
 }
 
@@ -374,7 +375,7 @@
 }
 
 .pb_171 {
-    padding-bottom: 80px;
+    padding-bottom: 60px;
 }
 
 .gap_32 {
@@ -573,9 +574,8 @@
         height: 3px;
         width: 100%;
         transition: all 400ms ease-in-out;
-
         z-index: 150;
-        background: var(--color-white);
+        background: var(--bg-green);
     }
 }
 
