--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,11 +365,13 @@
 
 .Ellips845 {
     right: 0;
+    opacity: 40%;
     top: -30%;
 }
 
 .Ellipse844 {
     left:0;
+    opacity: 40%;
     top: -30%;
 }
 
