change form div bg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,6 +182,7 @@
     padding: 16px;
     max-width: 518px;
     width: 100%;
+    background: #BAFF000F;
     border-radius: 48px;
     border: 1px solid #BAFF0066;
 }
